LU-9983 osp: align the OSP request size by 4k

Let's align the OSP request size by 4k, otherwise OUT
might get incorrect out requests.

Lustre-commit: 9994585785eeb46fdb42b6b409764c03ea5a7651
Lustre-change: https://review.whamcloud.com/29270

Signed-off-by: Di Wang <di.wang@intel.com>
Signed-off-by: Bob Glossman <bob.glossman@intel.com>
Change-Id: Id5c16b031dcb16d764c4e4f325f51b9ecf454533
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-on: https://review.whamcloud.com/29578
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>